--- a/_site.yml
+++ b/_site.yml
@@ -24,14 +24,14 @@ navbar:
       icon: fa-file
       href: about.html
     - text: "Resources"
-      icon: fa-book  fa-2x
+      icon: fa-book 
       href: resources.html
     - text: "R examples"
-      icon: fa-code  fa-2x
+      icon: fa-code 
       href: R/index.html
     - text: "Students"
       href: students.html
-      icon: fa-users fa-2x
+      icon: fa-users
   right:
-    - icon: fab fa-github
+    - icon: fab fa-github fa-2x
       href: https://github.com/friendly/psy6136
